[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
clap = "4.4.10"
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
strum = { version = "0.25", features = ["derive"] }

